--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,24 +25,6 @@
     -->
   <title>React App</title>
 </head>
-<style>
-  body {
-    width: 75%;
-    margin: 0 auto;
-    background-color: darkgray;
-    text-align: center;
-  }
-
-  #nav-bar {
-    display: flex;
-    padding: 2%;
-    justify-content: right;
-  }
-  #nav-bar a{
-    margin: 0 5%;
-  }
-</style>
-
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
